Noticed bug in input state updating, also fixed spacings and scaled label text size.

--- a/src/components/input/TextArea.scss
+++ b/src/components/input/TextArea.scss
@@ -1,10 +1,10 @@
 @import '../../styles/index';
 
-$label-offset: 16px;
 
 .text-area {
   position: relative;
-  margin-top: $label-offset;
+  margin-top: $material-spacing !important;
+  margin-bottom: $material-spacing !important;
 
   textarea {
     background: transparent;
@@ -15,8 +15,8 @@ $label-offset: 16px;
     outline: none;
     border: 0;
     border-bottom: 2px solid $colour-secondary;
-    padding-top: $label-offset;
-    padding-bottom: 8px;
+    padding-top: $material-padding;
+    padding-bottom: $material-spacing;
   }
 
   textarea:focus {
@@ -26,7 +26,7 @@ $label-offset: 16px;
   label {
     position: absolute;
     color: $colour-placeholder-text;
-    top: $label-offset;
+    top: $material-padding;
     pointer-events: none;
     transition: all 0.2s ease-in-out;
   }
@@ -34,7 +34,7 @@ $label-offset: 16px;
   textarea:focus + label, textarea:valid + label {
     position: absolute;
     top: 0;
-    font-size: 50%;
+    font-size: 75%;
     color: $colour-accent;
     transition: all 0.2s ease-in-out;
   }
